[package]
authors = ["aljun <gagasalamer@outlook.com>"]
edition = "2018"
license = "Apache-2.0"
name = "horapy"
version = "0.0.1"

description = "Hora Search Everywhere"
homepage = "https://horasearch.com"
readme = "README.md"
repository = "https://github.com/hora-search/hora"

categories = ["algorithms", "data-structures"]
keywords = ["intelligence", "neighbor", "SIMD", "search", "distance"]

[profile.dev]
codegen-units = 4
debug = 1
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = false
panic = 'unwind'
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false
panic = 'unwind'
rpath = false

[lib]
crate-type = ["cdylib"]
name = "horapy"

[dependencies]
numpy = "0.14.1"
hora = {version = "0.1.0", features = ["simd"]}

[dependencies.pyo3]
features = ["extension-module", "multiple-pymethods"]
version = "0.14.1"
